# SecureScript

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY_AUDIT.md  SECURITY_GUIDE.md  sample-file.py
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
Info/: ACTUAL-APP-ANALYSIS.md  ARCHITECTURE.md  CODE-CHANGES-FOR-SERVERLESS.md  COMPLETE-EXPLANATION.md  COSTS-AND-SCALING.md  DEPLOYMENT-GUIDE-AWS-VERCEL.md  DEPLOYMENT-OPTIONS.md  DOCKER-GUIDE.md  MIGRATION-GUIDE.md  QUICK-START-DEPLOYMENT.md  RESEARCH-WORKSPACE-ARCHITECTURE.md  WINDOWS-SETUP-GUIDE.md  cloud-architecture-comparison.md  deployment_instructions.md
backend/: .env.example  .gitignore  README.md  context.py  create_package.py  mcp_servers.py  pyproject.toml  server.py
backend/package_linux/: server.py
backend/package_linux/distro-1.9.0.dist-info/: RECORD
backend/package_linux/fastapi-0.128.0.dist-info/: RECORD
backend/package_linux/httpx-0.28.1.dist-info/: RECORD
backend/package_linux/openai-2.15.0.dist-info/: RECORD
backend/package_linux/python_dotenv-1.2.1.dist-info/: RECORD
backend/package_linux/tqdm-4.67.1.dist-info/: RECORD
backend/test/: test_analyze.py  test_env.py  test_groq_api.py  test_groq_mcp.py
frontend/: dummy_vuln.py  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisResults.tsx  CodeInput.tsx  FileUpload.tsx  Header.tsx  VulnerabilityCard.tsx
terraform/aws/: README.md  deploy.ps1  destroy.ps1  main.tf  outputs.tf  variables.tf
(+1 files in other folders)
